add_executable(TestContainers TestContainers.cpp)
thor_macos_target_setup_console_app(TestContainers)
target_link_libraries(TestContainers Core)

add_executable(TestFileSystem TestFileSystem.cpp)
thor_macos_target_setup_console_app(TestFileSystem)
target_link_libraries(TestFileSystem Core)

add_executable(TestReflection TestReflection.cpp)
thor_macos_target_setup_console_app(TestReflection)
target_link_libraries(TestReflection Core)

add_executable(TestRefPtr TestRefPtr.cpp)
thor_macos_target_setup_console_app(TestRefPtr)
target_link_libraries(TestRefPtr Core)

add_executable(TestSSE TestSSE.cpp)
thor_macos_target_setup_console_app(TestSSE)
target_link_libraries(TestSSE Core Math)

add_executable(TestAllocators TestAllocators.cpp)
thor_macos_target_setup_console_app(TestAllocators)
target_link_libraries(TestAllocators Core)